[package]
name = "downloader4etesty2"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
reqwest = { version = "0.12.20", features = [
    "rustls-tls", # simplifies package management on NixOS
], default-features = false }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
